--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,27 +4,31 @@
   "display": "fullscreen",
   "start_url": "/",
   "name": "Barcode Scanner",
-  "short_name": "barcode",
+  "short_name": "barcodescanner",
   "icons": [
     {
       "src": "/icon/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon/icon-256x256.png",
       "sizes": "256x256",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon/icon-384x384.png",
       "sizes": "384x384",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icon/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
