--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#f69435",
-  "background_color": "#f69435",
+  "theme_color": "#75b06d",
+  "background_color": "#75b06d",
   "display": "fullscreen",
   "start_url": "/",
   "name": "Barcode Scanner",
